--- a/.github/workflows/iot.mi.com.yml
+++ b/.github/workflows/iot.mi.com.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 2 * * *"   # 每天 UTC 时间 02:00 执行（北京时间 10:00）
   workflow_dispatch:       # 允许手动触发
 
+permissions:
+  contents: write
+
 jobs:
   crawl:
     runs-on: ubuntu-latest
