--- a/.github/workflows/iot.mi.com.yml
+++ b/.github/workflows/iot.mi.com.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up environment
         run: |
           sudo apt-get update
-          sudo apt-get install -y wget
+          sudo apt-get install -y wget pandoc
           export LANG=zh_CN.UTF-8
           export LC_ALL=zh_CN.UTF-8
 
@@ -38,7 +38,8 @@ jobs:
                --local-encoding=UTF-8 \
                --remote-encoding=UTF-8 \
                --no-if-modified-since \
-               "https://iot.mi.com/vela/quickapp/zh/" || true
+               "https://iot.mi.com/vela/quickapp/zh/" \
+               -o wget.log || true
 
       - name: Show wget log
         run: |
@@ -46,10 +47,22 @@ jobs:
           tail -n 50 wget.log || true
           echo "==== WGET LOG END ===="
 
+      - name: Convert HTML to Markdown
+        run: |
+          mkdir -p vele-docs/markdown
+          # 遍历所有 html 文件
+          find vele-docs -type f -name "*.html" | while read file; do
+            # 目标路径：替换前缀 vele-docs/ 为 vele-docs/markdown/
+            rel="${file#vele-docs/}"
+            target="vele-docs/markdown/${rel%.html}.md"
+            mkdir -p "$(dirname "$target")"
+            pandoc "$file" -f html -t markdown -o "$target"
+          done
+
       - name: Commit and push changes
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          git commit -m "chore: daily crawl $(date '+%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
+          git add vele-docs
+          git commit -m "chore: daily crawl & convert $(date '+%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
           git push
